--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,1 +1,21 @@
-<p>heroes works!</p>
+<h4>Search for any Hero name</h4>
+<input #searchinput (keyup)=searchingFor(searchinput.value) type="text">
+
+<table class="table table-dark">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Name</th>
+      <th scope="col">SuperPower</th>
+      <th scope="col">Address</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let hero of herolista |name:searchText">
+      <td>{{hero.id}}</td>
+      <td>{{hero.name}}</td>
+      <td>{{hero.superPower}}</td>
+      <td>{{hero.address}}</td>
+    </tr>
+  </tbody>
+</table>
