--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Heroes</h1>
+    <a class="btn btn-primary btn-lg m-3 px-4" routerLink="/heroes" routerLinkActive="router-link-active"  role="button">Learn more</a>
+  </div>
+</div>
